<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_years"
        android:id="@+id/label_years" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_years"
        android:orientation="horizontal"
        android:layout_alignLeft="@+id/data_rate">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            android:id="@+id/ten" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifteen"
            android:id="@+id/fifteen" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thirty"
            android:id="@+id/thirty" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_amount"
        android:id="@+id/label_amount"
        android:layout_below="@+id/label_years"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data_amount"
        android:inputType="numberDecimal"
        android:layout_toRightOf="@+id/label_amount"
        android:layout_alignBottom="@+id/label_amount"
        android:text="@string/amount_decimal"
        android:layout_alignParentRight="true"
        android:layout_alignLeft="@+id/data_rate"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_rate"
        android:id="@+id/label_rate"
        android:layout_below="@+id/label_amount"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data_rate"
        android:inputType="numberDecimal"
        android:layout_toRightOf="@+id/label_rate"
        android:layout_alignBottom="@+id/label_rate"
        android:text="@string/rate_percent"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/go_back"
        android:layout_below="@+id/label_rate"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>